--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,11 +1,11 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Imperialism Remake
+application.vendor=Trilarion
 build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
+build.classes.excludes=**/*.java,**/*.form,**/package.html
 # This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
@@ -24,13 +24,15 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/Imperialism Remake.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
-jar.compress=false
-javac.classpath=
+jar.compress=true
+javac.classpath=\
+    ${reference.Tools.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
-javac.deprecation=false
+javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.6
@@ -56,6 +58,8 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.Tools=../05_Tools
+reference.Tools.jar=${project.Tools}/dist/Tools.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
