--- a/trunk/main/nbproject/project.properties
+++ b/trunk/main/nbproject/project.properties
@@ -1,8 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Imperialism Remake
+application.title=Imperialism Remake main
 application.vendor=Trilarion
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form,**/package.html
