--- a/trunk/sub-one/nbproject/project.properties
+++ b/trunk/sub-one/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Imperialism Remake main
+application.title=Imperialism Remake sub one
 application.vendor=Trilarion
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form,**/package.html
@@ -23,7 +23,7 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Imperialism Remake.jar
+dist.jar=${dist.dir}/Imperialism Remake sub one.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
@@ -55,13 +55,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=org.imperialism.Main
+main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.Imperialism_Remake_common=../common
-project.Tools=../05_Tools
+project.Tools=../../05_Tools
 reference.Imperialism_Remake_common.jar=${project.Imperialism_Remake_common}/dist/Remake_common.jar
 reference.Tools.jar=${project.Tools}/dist/Tools.jar
 run.classpath=\
