--- a/main/nbproject/project.properties
+++ b/main/nbproject/project.properties
@@ -28,10 +28,11 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
+jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${reference.Tools.jar}:\
-    ${reference.Imperialism_Remake_common.jar}
+    ${reference.Tools.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -55,14 +56,21 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=org.imperialism.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.Imperialism_Remake_common=../common
 project.Tools=../05_Tools
-reference.Imperialism_Remake_common.jar=${project.Imperialism_Remake_common}/dist/Remake_common.jar
 reference.Tools.jar=${project.Tools}/dist/Tools.jar
 run.classpath=\
     ${javac.classpath}:\
