--- a/main/nbproject/project.properties
+++ b/main/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Imperialism Remake main
+application.title=Imperialism Remake
 application.vendor=Trilarion
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form,**/package.html
@@ -38,8 +38,8 @@ javac.compilerargs=
 javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -65,7 +65,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=org.imperialism.Main
+main.class=org.iremake.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
