--- a/trunk/main/nbproject/project.properties
+++ b/trunk/main/nbproject/project.properties
@@ -34,7 +34,7 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.Tools.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked
 javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
