--- a/trunk/main/nbproject/project.properties
+++ b/trunk/main/nbproject/project.properties
@@ -69,7 +69,7 @@ main.class=org.iremake.client.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.7
 project.Tools=../05_Tools
 reference.Tools.jar=${project.Tools}/dist/Tools.jar
 run.classpath=\
