--- a/trunk/main/nbproject/project.properties
+++ b/trunk/main/nbproject/project.properties
@@ -38,8 +38,8 @@ javac.compilerargs=-Xlint:unchecked
 javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -69,7 +69,7 @@ main.class=org.iremake.client.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.7
+platform.active=default_platform
 project.Tools=../05_Tools
 reference.Tools.jar=${project.Tools}/dist/Tools.jar
 run.classpath=\
