xml: still error in XMLCreator NoDefError because of XOM??

--- a/main/nbproject/project.properties
+++ b/main/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.jar=${dist.dir}/Imperialism Remake.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.xom-1.2.8.jar=../../05_Tools/lib/xom-1.2.8.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
@@ -52,6 +53,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.xom-1.2.8.jar=../../05_Tools/lib/xom-1.2.8_apidocs.zip!/apidocs/
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -74,7 +76,8 @@ project.Tools=../05_Tools
 reference.Tools.jar=${project.Tools}/dist/Tools.jar
 run.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${file.reference.xom-1.2.8.jar}
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
