--- a/main/nbproject/project.properties
+++ b/main/nbproject/project.properties
@@ -33,7 +33,8 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${reference.Tools.jar}
+    ${reference.Tools.jar}:\
+    ${file.reference.xom-1.2.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=true
@@ -76,8 +77,7 @@ project.Tools=../05_Tools
 reference.Tools.jar=${project.Tools}/dist/Tools.jar
 run.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${file.reference.xom-1.2.8.jar}
+    ${build.classes.dir}
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
