--- a/trunk/main/nbproject/project.properties
+++ b/trunk/main/nbproject/project.properties
@@ -23,7 +23,7 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Imperialism Remake.jar
+dist.jar=${dist.dir}/imperialism-remake.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
@@ -33,7 +33,7 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${reference.Tools.jar}:\
+    ${reference.Tools_library.jar}:\
     ${file.reference.xom-1.2.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
@@ -74,7 +74,9 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.Tools=../05_Tools
-reference.Tools.jar=${project.Tools}/dist/Tools.jar
+project.Tools_library=../../05_Tools
+reference.Tools.jar=${project.Tools}/dist/tools.jar
+reference.Tools_library.jar=${project.Tools_library}/dist/tools.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
