--- a/main/nbproject/project.properties
+++ b/main/nbproject/project.properties
@@ -68,7 +68,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=org.iremake.client.Main
+main.class=org.iremake.client.StartClient
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
