--- a/trunk/main/nbproject/project.properties
+++ b/trunk/main/nbproject/project.properties
@@ -27,14 +27,14 @@ dist.jar=${dist.dir}/imperialism-remake.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.xom-1.2.8.jar=../../05_Tools/lib/xom-1.2.8.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.Tools_library.jar}:\
-    ${file.reference.xom-1.2.8.jar}
+    ${libs.XOM.classpath}:\
+    ${libs.Netty.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=true
@@ -54,7 +54,6 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
-javadoc.reference.xom-1.2.8.jar=../../05_Tools/lib/xom-1.2.8_apidocs.zip!/apidocs/
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -74,7 +73,7 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 project.Tools=../05_Tools
-project.Tools_library=../../05_Tools
+project.Tools_library=../../tools
 reference.Tools.jar=${project.Tools}/dist/tools.jar
 reference.Tools_library.jar=${project.Tools_library}/dist/tools.jar
 run.classpath=\
