--- a/trunk/main/nbproject/project.properties
+++ b/trunk/main/nbproject/project.properties
@@ -6,7 +6,7 @@ annotation.processing.source.output=${build.generated.sources.dir}/ap-source-out
 application.title=Imperialism Remake
 application.vendor=Trilarion
 build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form,**/package.html
+build.classes.excludes=**/*.java,**/*.form,**/package.html,**/*.proto
 # This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
@@ -34,7 +34,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.Tools_library.jar}:\
     ${libs.XOM.classpath}:\
-    ${libs.Netty.classpath}
+    ${libs.Netty.classpath}:\
+    ${libs.ProtoBuf.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=true
