--- a/main/nbproject/project.properties
+++ b/main/nbproject/project.properties
@@ -34,8 +34,7 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${reference.Tools_library.jar}:\
     ${libs.XOM.classpath}:\
-    ${libs.Netty.classpath}:\
-    ${libs.ProtoBuf.classpath}
+    ${libs.Kryonet.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=true
