--- a/trunk/main/nbproject/project.properties
+++ b/trunk/main/nbproject/project.properties
@@ -33,7 +33,8 @@ jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.XOM.classpath}:\
-    ${libs.Kryonet.classpath}
+    ${libs.Kryonet.classpath}:\
+    ${libs.MigLayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=true
