--- a/trunk/main/nbproject/project.properties
+++ b/trunk/main/nbproject/project.properties
@@ -27,14 +27,17 @@ dist.jar=${dist.dir}/imperialism-remake.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.kryonet-2.18-all.jar=lib/kryonet-2.18-all.jar
+file.reference.miglayout-4.0-swing.jar=lib/miglayout-4.0-swing.jar
+file.reference.xom-1.2.8.jar=lib/xom-1.2.8.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.XOM.classpath}:\
-    ${libs.Kryonet.classpath}:\
-    ${libs.MigLayout.classpath}
+    ${file.reference.xom-1.2.8.jar}:\
+    ${file.reference.miglayout-4.0-swing.jar}:\
+    ${file.reference.kryonet-2.18-all.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=true
