--- a/trunk/main/nbproject/project.properties
+++ b/trunk/main/nbproject/project.properties
@@ -89,6 +89,7 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.xom-1.2.8.jar=lib/xom-1.2.8-src.zip!/XOM/src/
 src.dir=src
 test.src.dir=test
 project.license=gpl30
