--- a/trunk/side/vorbis/nbproject/project.properties
+++ b/trunk/side/vorbis/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Imperialism Remake
+application.title=Vorbis Support
 application.vendor=Trilarion
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form,**/package.html
@@ -23,24 +23,17 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/imperialism-remake.jar
+dist.jar=${dist.dir}/vorbis-support.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.kryonet-2.18-all.jar=lib/kryonet-2.18-all.jar
-file.reference.miglayout-4.0-swing.jar=lib/miglayout-4.0-swing.jar
-file.reference.xom-1.2.8.jar=lib/xom-1.2.8.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
-javac.classpath=\
-    ${file.reference.xom-1.2.8.jar}:\
-    ${file.reference.miglayout-4.0-swing.jar}:\
-    ${file.reference.kryonet-2.18-all.jar}:\
-    ${reference.Vorbis_Support.jar}
+javac.classpath=
 # Space-separated list of extra javac options
-javac.compilerargs=-Xlint:unchecked
+javac.compilerargs=
 javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
@@ -48,8 +41,7 @@ javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_4.classpath}
+    ${build.classes.dir}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -72,27 +64,19 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=org.iremake.client.StartClient
-manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.Tools=../05_Tools
-project.Vorbis_Support=../side/vorbis
-reference.Tools.jar=${project.Tools}/dist/tools.jar
-reference.Vorbis_Support.jar=${project.Vorbis_Support}/dist/vorbis-support.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project
-# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
-# or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=-Xmx40m
+# Space-separated list of JVM arguments used when running the project.
+# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
+# To set system properties for unit tests define test-sys-prop.name=value:
+run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
-source.reference.xom-1.2.8.jar=lib/xom-1.2.8-src.zip!/XOM/src/
 src.dir=src
 test.src.dir=test
-project.license=gpl30
