vorbis: this is the version combining jorbis, vorbis-spi and tritonus (plus a lot of unnecessary files) next step will be to prune the code of all unnecessary classes

--- a/side/vorbis/data/javazoom.spi.test.ogg.properties
+++ b/side/vorbis/data/javazoom.spi.test.ogg.properties
@@ -1,7 +1,7 @@
 # Ogg Vorbis file
-basefile=g:/data/
-baseurl=file:///g:/data/
-filename=test.ogg
+basefile=
+baseurl=file:///
+filename=Agogo.ogg
 
 # Streams
 #stream=http://la.campus.ltu.se:8000/stream.ogg 
