--- a/trunk/side/vorbis/data/javazoom.spi.test.ogg.properties
+++ b/trunk/side/vorbis/data/javazoom.spi.test.ogg.properties
@@ -1,7 +1,7 @@
 # Ogg Vorbis file
-basefile=g:/data/
-baseurl=file:///g:/data/
-filename=test.ogg
+basefile=
+baseurl=file:///
+filename=Agogo.ogg
 
 # Streams
 #stream=http://la.campus.ltu.se:8000/stream.ogg 
