--- a/trunk/side/vorbis/nbproject/project.properties
+++ b/trunk/side/vorbis/nbproject/project.properties
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-jnlp.applet.class=com.jcraft.JOrbisPlayer
+jnlp.applet.class=org.vorbis.jcraft.JOrbisPlayer
 jnlp.applet.height=300
 jnlp.applet.width=300
 jnlp.codebase.type=no.codebase
