--- a/trunk/side/vorbis/data/spi.test.properties
+++ b/trunk/side/vorbis/data/spi.test.properties
@@ -5,7 +5,7 @@ filename=Agogo.ogg
 
 # Streams
 #stream=http://la.campus.ltu.se:8000/stream.ogg 
-stream=http://stream.lrz-muenchen.de:31337/m945-lq.ogg
+stream=http://www.twelvepm.de/vorbis/Agogo.ogg
 
 # AudioFileFormat and AudioFormat properties
 
