--- a/trunk/side/tools/nbproject/project.properties
+++ b/trunk/side/tools/nbproject/project.properties
@@ -35,7 +35,8 @@ jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.miglayout-4.0-swing.jar}:\
-    ${file.reference.xom-1.2.8.jar}
+    ${file.reference.xom-1.2.8.jar}:\
+    ${reference.Vorbis_Support.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -72,6 +73,8 @@ jnlp.signing.keystore=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.Vorbis_Support=../vorbis
+reference.Vorbis_Support.jar=${project.Vorbis_Support}/dist/vorbis-support-1.0.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
