--- a/trunk/main/nbproject/project.properties
+++ b/trunk/main/nbproject/project.properties
@@ -38,8 +38,8 @@ javac.classpath=\
     ${file.reference.xom-1.2.8.jar}:\
     ${file.reference.miglayout-4.0-swing.jar}:\
     ${file.reference.kryonet-2.18-all.jar}:\
-    ${reference.Vorbis_Support.jar}:\
-    ${reference.Imperialism_Support.jar}
+    ${reference.Imperialism_Support.jar}:\
+    ${reference.Vorbis_Support.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=-Xlint:unchecked
 javac.deprecation=true
@@ -83,7 +83,7 @@ project.Tools=../05_Tools
 project.Vorbis_Support=../side/vorbis
 reference.Imperialism_Support.jar=${project.Imperialism_Support}/dist/tools.jar
 reference.Tools.jar=${project.Tools}/dist/tools.jar
-reference.Vorbis_Support.jar=${project.Vorbis_Support}/dist/vorbis-support.jar
+reference.Vorbis_Support.jar=${project.Vorbis_Support}/dist/vorbis-support-1.0.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
