--- a/trunk/main/nbproject/project.properties
+++ b/trunk/main/nbproject/project.properties
@@ -3,6 +3,8 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.homepage=http://remake.twelvepm.de/
+application.splash=splash.png
 application.title=Imperialism Remake
 application.vendor=Trilarion
 build.classes.dir=${build.dir}/classes
