more on continuous tiles

--- a/side/tile test/nbproject/project.properties
+++ b/side/tile test/nbproject/project.properties
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=org.iremake.ctt.MainFrame
+main.class=org.iremake.ctt.ContinuousTileTest
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
