--- a/trunk/side/tools/nbproject/project.properties
+++ b/trunk/side/tools/nbproject/project.properties
@@ -38,7 +38,7 @@ javac.classpath=\
     ${file.reference.xom-1.2.8.jar}:\
     ${reference.Vorbis_Support.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=
+javac.compilerargs=-Xlint:unchecked
 javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
