--- a/trunk/main/nbproject/project.properties
+++ b/trunk/main/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/imperialism-remake.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.kryonet-2.18-all.jar=lib/kryonet-2.18-all.jar
+file.reference.kryonet-debug-2.18-all.jar=lib/kryonet-debug-2.18-all.jar
 file.reference.miglayout-4.0-swing.jar=lib/miglayout-4.0-swing.jar
 file.reference.xom-1.2.8.jar=lib/xom-1.2.8.jar
 includes=**
@@ -39,7 +39,7 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.xom-1.2.8.jar}:\
     ${file.reference.miglayout-4.0-swing.jar}:\
-    ${file.reference.kryonet-2.18-all.jar}:\
+    ${file.reference.kryonet-debug-2.18-all.jar}:\
     ${reference.Imperialism_Support.jar}:\
     ${reference.Vorbis_Support.jar}
 # Space-separated list of extra javac options
